[package]
name = "breakout"
version = "0.1.0"
authors = ["Setoh <thomasserre63@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["mixer","ttf"]